src/server/parser/parser.output
Terminales no usados en la gramática

   WORD
   COMMENT


Estado 5 conflictos: 3 desplazamiento/reducción


Gramática

    0 $accept: parse $end

    1 parse: lines

    2 lines: lines line
    3      | line

    4 line: PRINT expression SEMICOLON
    5     | CREATEOBJECTINIT lines CREATEOBJECTEND
    6     | CREATEOBJECTINIT CREATEOBJECTEND
    7     | VARIABLE ADD line SEMICOLON
    8     | VARIABLE RM line SEMICOLON
    9     | VARIABLE EQUALS lines SEMICOLON
   10     | CREATEOBJECTINIT argument BAR expression SEMICOLON RPAREN
   11     | atom_expression
   12     | VARIABLE VARIABLE SEMICOLON
   13     | expression

   14 argument: %empty
   15         | ARGS

   16 atom_expression: VARIABLE SEMICOLON
   17                | VARIABLE EQUALSMUTAL expression SEMICOLON
   18                | VARIABLE SET expression SEMICOLON
   19                | VARIABLE ASTERISK EQUALS VARIABLE SEMICOLON
   20                | ARGS

   21 expression: expression PLUS inner1
   22           | expression MINUS inner1
   23           | inner1

   24 inner1: inner1 ASTERISK inner2
   25       | inner1 FSLASH inner2
   26       | inner2

   27 inner2: VARIABLE
   28       | NUMBER
   29       | LPAREN expression RPAREN


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
PLUS (258) 21
MINUS (259) 22
ASTERISK (260) 19 24
FSLASH (261) 25
EQUALS (262) 9 19
PRINT (263) 4
LPAREN (264) 29
RPAREN (265) 10 29
SEMICOLON (266) 4 7 8 9 10 12 16 17 18 19
EQUALSMUTAL (267) 17
SET (268) 18
BAR (269) 10
ADD (270) 7
RM (271) 8
CREATEOBJECTINIT (272) 5 6 10
CREATEOBJECTEND (273) 5 6
ARGS (274) 15 20
WORD (275)
COMMENT (276)
VARIABLE (277) 7 8 9 12 16 17 18 19 27
NUMBER (278) 28


No terminales con las reglas donde aparecen

$accept (24)
    en la izquierda: 0
parse (25)
    en la izquierda: 1, en la derecha: 0
lines (26)
    en la izquierda: 2 3, en la derecha: 1 2 5 9
line (27)
    en la izquierda: 4 5 6 7 8 9 10 11 12 13, en la derecha: 2 3 7
    8
argument (28)
    en la izquierda: 14 15, en la derecha: 10
atom_expression (29)
    en la izquierda: 16 17 18 19 20, en la derecha: 11
expression (30)
    en la izquierda: 21 22 23, en la derecha: 4 10 13 17 18 21 22 29
inner1 (31)
    en la izquierda: 24 25 26, en la derecha: 21 22 23 24 25
inner2 (32)
    en la izquierda: 27 28 29, en la derecha: 24 25 26


Estado 0

    0 $accept: . parse $end

    PRINT             desplazar e ir al estado 1
    LPAREN            desplazar e ir al estado 2
    CREATEOBJECTINIT  desplazar e ir al estado 3
    ARGS              desplazar e ir al estado 4
    VARIABLE          desplazar e ir al estado 5
    NUMBER            desplazar e ir al estado 6

    parse            ir al estado 7
    lines            ir al estado 8
    line             ir al estado 9
    atom_expression  ir al estado 10
    expression       ir al estado 11
    inner1           ir al estado 12
    inner2           ir al estado 13


Estado 1

    4 line: PRINT . expression SEMICOLON

    LPAREN    desplazar e ir al estado 2
    VARIABLE  desplazar e ir al estado 14
    NUMBER    desplazar e ir al estado 6

    expression  ir al estado 15
    inner1      ir al estado 12
    inner2      ir al estado 13


Estado 2

   29 inner2: LPAREN . expression RPAREN

    LPAREN    desplazar e ir al estado 2
    VARIABLE  desplazar e ir al estado 14
    NUMBER    desplazar e ir al estado 6

    expression  ir al estado 16
    inner1      ir al estado 12
    inner2      ir al estado 13


Estado 3

    5 line: CREATEOBJECTINIT . lines CREATEOBJECTEND
    6     | CREATEOBJECTINIT . CREATEOBJECTEND
   10     | CREATEOBJECTINIT . argument BAR expression SEMICOLON RPAREN

    PRINT             desplazar e ir al estado 1
    LPAREN            desplazar e ir al estado 2
    CREATEOBJECTINIT  desplazar e ir al estado 3
    CREATEOBJECTEND   desplazar e ir al estado 17
    ARGS              desplazar e ir al estado 18
    VARIABLE          desplazar e ir al estado 5
    NUMBER            desplazar e ir al estado 6

    $default  reduce usando la regla 14 (argument)

    lines            ir al estado 19
    line             ir al estado 9
    argument         ir al estado 20
    atom_expression  ir al estado 10
    expression       ir al estado 11
    inner1           ir al estado 12
    inner2           ir al estado 13


Estado 4

   20 atom_expression: ARGS .

    $default  reduce usando la regla 20 (atom_expression)


Estado 5

    7 line: VARIABLE . ADD line SEMICOLON
    8     | VARIABLE . RM line SEMICOLON
    9     | VARIABLE . EQUALS lines SEMICOLON
   12     | VARIABLE . VARIABLE SEMICOLON
   16 atom_expression: VARIABLE . SEMICOLON
   17                | VARIABLE . EQUALSMUTAL expression SEMICOLON
   18                | VARIABLE . SET expression SEMICOLON
   19                | VARIABLE . ASTERISK EQUALS VARIABLE SEMICOLON
   27 inner2: VARIABLE .

    ASTERISK     desplazar e ir al estado 21
    EQUALS       desplazar e ir al estado 22
    SEMICOLON    desplazar e ir al estado 23
    EQUALSMUTAL  desplazar e ir al estado 24
    SET          desplazar e ir al estado 25
    ADD          desplazar e ir al estado 26
    RM           desplazar e ir al estado 27
    VARIABLE     desplazar e ir al estado 28

    ASTERISK   [reduce usando la regla 27 (inner2)]
    SEMICOLON  [reduce usando la regla 27 (inner2)]
    VARIABLE   [reduce usando la regla 27 (inner2)]
    $default   reduce usando la regla 27 (inner2)


Estado 6

   28 inner2: NUMBER .

    $default  reduce usando la regla 28 (inner2)


Estado 7

    0 $accept: parse . $end

    $end  desplazar e ir al estado 29


Estado 8

    1 parse: lines .
    2 lines: lines . line

    PRINT             desplazar e ir al estado 1
    LPAREN            desplazar e ir al estado 2
    CREATEOBJECTINIT  desplazar e ir al estado 3
    ARGS              desplazar e ir al estado 4
    VARIABLE          desplazar e ir al estado 5
    NUMBER            desplazar e ir al estado 6

    $default  reduce usando la regla 1 (parse)

    line             ir al estado 30
    atom_expression  ir al estado 10
    expression       ir al estado 11
    inner1           ir al estado 12
    inner2           ir al estado 13


Estado 9

    3 lines: line .

    $default  reduce usando la regla 3 (lines)


Estado 10

   11 line: atom_expression .

    $default  reduce usando la regla 11 (line)


Estado 11

   13 line: expression .
   21 expression: expression . PLUS inner1
   22           | expression . MINUS inner1

    PLUS   desplazar e ir al estado 31
    MINUS  desplazar e ir al estado 32

    $default  reduce usando la regla 13 (line)


Estado 12

   23 expression: inner1 .
   24 inner1: inner1 . ASTERISK inner2
   25       | inner1 . FSLASH inner2

    ASTERISK  desplazar e ir al estado 33
    FSLASH    desplazar e ir al estado 34

    $default  reduce usando la regla 23 (expression)


Estado 13

   26 inner1: inner2 .

    $default  reduce usando la regla 26 (inner1)


Estado 14

   27 inner2: VARIABLE .

    $default  reduce usando la regla 27 (inner2)


Estado 15

    4 line: PRINT expression . SEMICOLON
   21 expression: expression . PLUS inner1
   22           | expression . MINUS inner1

    PLUS       desplazar e ir al estado 31
    MINUS      desplazar e ir al estado 32
    SEMICOLON  desplazar e ir al estado 35


Estado 16

   21 expression: expression . PLUS inner1
   22           | expression . MINUS inner1
   29 inner2: LPAREN expression . RPAREN

    PLUS    desplazar e ir al estado 31
    MINUS   desplazar e ir al estado 32
    RPAREN  desplazar e ir al estado 36


Estado 17

    6 line: CREATEOBJECTINIT CREATEOBJECTEND .

    $default  reduce usando la regla 6 (line)


Estado 18

   15 argument: ARGS .
   20 atom_expression: ARGS .

    BAR       reduce usando la regla 15 (argument)
    $default  reduce usando la regla 20 (atom_expression)


Estado 19

    2 lines: lines . line
    5 line: CREATEOBJECTINIT lines . CREATEOBJECTEND

    PRINT             desplazar e ir al estado 1
    LPAREN            desplazar e ir al estado 2
    CREATEOBJECTINIT  desplazar e ir al estado 3
    CREATEOBJECTEND   desplazar e ir al estado 37
    ARGS              desplazar e ir al estado 4
    VARIABLE          desplazar e ir al estado 5
    NUMBER            desplazar e ir al estado 6

    line             ir al estado 30
    atom_expression  ir al estado 10
    expression       ir al estado 11
    inner1           ir al estado 12
    inner2           ir al estado 13


Estado 20

   10 line: CREATEOBJECTINIT argument . BAR expression SEMICOLON RPAREN

    BAR  desplazar e ir al estado 38


Estado 21

   19 atom_expression: VARIABLE ASTERISK . EQUALS VARIABLE SEMICOLON

    EQUALS  desplazar e ir al estado 39


Estado 22

    9 line: VARIABLE EQUALS . lines SEMICOLON

    PRINT             desplazar e ir al estado 1
    LPAREN            desplazar e ir al estado 2
    CREATEOBJECTINIT  desplazar e ir al estado 3
    ARGS              desplazar e ir al estado 4
    VARIABLE          desplazar e ir al estado 5
    NUMBER            desplazar e ir al estado 6

    lines            ir al estado 40
    line             ir al estado 9
    atom_expression  ir al estado 10
    expression       ir al estado 11
    inner1           ir al estado 12
    inner2           ir al estado 13


Estado 23

   16 atom_expression: VARIABLE SEMICOLON .

    $default  reduce usando la regla 16 (atom_expression)


Estado 24

   17 atom_expression: VARIABLE EQUALSMUTAL . expression SEMICOLON

    LPAREN    desplazar e ir al estado 2
    VARIABLE  desplazar e ir al estado 14
    NUMBER    desplazar e ir al estado 6

    expression  ir al estado 41
    inner1      ir al estado 12
    inner2      ir al estado 13


Estado 25

   18 atom_expression: VARIABLE SET . expression SEMICOLON

    LPAREN    desplazar e ir al estado 2
    VARIABLE  desplazar e ir al estado 14
    NUMBER    desplazar e ir al estado 6

    expression  ir al estado 42
    inner1      ir al estado 12
    inner2      ir al estado 13


Estado 26

    7 line: VARIABLE ADD . line SEMICOLON

    PRINT             desplazar e ir al estado 1
    LPAREN            desplazar e ir al estado 2
    CREATEOBJECTINIT  desplazar e ir al estado 3
    ARGS              desplazar e ir al estado 4
    VARIABLE          desplazar e ir al estado 5
    NUMBER            desplazar e ir al estado 6

    line             ir al estado 43
    atom_expression  ir al estado 10
    expression       ir al estado 11
    inner1           ir al estado 12
    inner2           ir al estado 13


Estado 27

    8 line: VARIABLE RM . line SEMICOLON

    PRINT             desplazar e ir al estado 1
    LPAREN            desplazar e ir al estado 2
    CREATEOBJECTINIT  desplazar e ir al estado 3
    ARGS              desplazar e ir al estado 4
    VARIABLE          desplazar e ir al estado 5
    NUMBER            desplazar e ir al estado 6

    line             ir al estado 44
    atom_expression  ir al estado 10
    expression       ir al estado 11
    inner1           ir al estado 12
    inner2           ir al estado 13


Estado 28

   12 line: VARIABLE VARIABLE . SEMICOLON

    SEMICOLON  desplazar e ir al estado 45


Estado 29

    0 $accept: parse $end .

    $default  aceptar


Estado 30

    2 lines: lines line .

    $default  reduce usando la regla 2 (lines)


Estado 31

   21 expression: expression PLUS . inner1

    LPAREN    desplazar e ir al estado 2
    VARIABLE  desplazar e ir al estado 14
    NUMBER    desplazar e ir al estado 6

    inner1  ir al estado 46
    inner2  ir al estado 13


Estado 32

   22 expression: expression MINUS . inner1

    LPAREN    desplazar e ir al estado 2
    VARIABLE  desplazar e ir al estado 14
    NUMBER    desplazar e ir al estado 6

    inner1  ir al estado 47
    inner2  ir al estado 13


Estado 33

   24 inner1: inner1 ASTERISK . inner2

    LPAREN    desplazar e ir al estado 2
    VARIABLE  desplazar e ir al estado 14
    NUMBER    desplazar e ir al estado 6

    inner2  ir al estado 48


Estado 34

   25 inner1: inner1 FSLASH . inner2

    LPAREN    desplazar e ir al estado 2
    VARIABLE  desplazar e ir al estado 14
    NUMBER    desplazar e ir al estado 6

    inner2  ir al estado 49


Estado 35

    4 line: PRINT expression SEMICOLON .

    $default  reduce usando la regla 4 (line)


Estado 36

   29 inner2: LPAREN expression RPAREN .

    $default  reduce usando la regla 29 (inner2)


Estado 37

    5 line: CREATEOBJECTINIT lines CREATEOBJECTEND .

    $default  reduce usando la regla 5 (line)


Estado 38

   10 line: CREATEOBJECTINIT argument BAR . expression SEMICOLON RPAREN

    LPAREN    desplazar e ir al estado 2
    VARIABLE  desplazar e ir al estado 14
    NUMBER    desplazar e ir al estado 6

    expression  ir al estado 50
    inner1      ir al estado 12
    inner2      ir al estado 13


Estado 39

   19 atom_expression: VARIABLE ASTERISK EQUALS . VARIABLE SEMICOLON

    VARIABLE  desplazar e ir al estado 51


Estado 40

    2 lines: lines . line
    9 line: VARIABLE EQUALS lines . SEMICOLON

    PRINT             desplazar e ir al estado 1
    LPAREN            desplazar e ir al estado 2
    SEMICOLON         desplazar e ir al estado 52
    CREATEOBJECTINIT  desplazar e ir al estado 3
    ARGS              desplazar e ir al estado 4
    VARIABLE          desplazar e ir al estado 5
    NUMBER            desplazar e ir al estado 6

    line             ir al estado 30
    atom_expression  ir al estado 10
    expression       ir al estado 11
    inner1           ir al estado 12
    inner2           ir al estado 13


Estado 41

   17 atom_expression: VARIABLE EQUALSMUTAL expression . SEMICOLON
   21 expression: expression . PLUS inner1
   22           | expression . MINUS inner1

    PLUS       desplazar e ir al estado 31
    MINUS      desplazar e ir al estado 32
    SEMICOLON  desplazar e ir al estado 53


Estado 42

   18 atom_expression: VARIABLE SET expression . SEMICOLON
   21 expression: expression . PLUS inner1
   22           | expression . MINUS inner1

    PLUS       desplazar e ir al estado 31
    MINUS      desplazar e ir al estado 32
    SEMICOLON  desplazar e ir al estado 54


Estado 43

    7 line: VARIABLE ADD line . SEMICOLON

    SEMICOLON  desplazar e ir al estado 55


Estado 44

    8 line: VARIABLE RM line . SEMICOLON

    SEMICOLON  desplazar e ir al estado 56


Estado 45

   12 line: VARIABLE VARIABLE SEMICOLON .

    $default  reduce usando la regla 12 (line)


Estado 46

   21 expression: expression PLUS inner1 .
   24 inner1: inner1 . ASTERISK inner2
   25       | inner1 . FSLASH inner2

    ASTERISK  desplazar e ir al estado 33
    FSLASH    desplazar e ir al estado 34

    $default  reduce usando la regla 21 (expression)


Estado 47

   22 expression: expression MINUS inner1 .
   24 inner1: inner1 . ASTERISK inner2
   25       | inner1 . FSLASH inner2

    ASTERISK  desplazar e ir al estado 33
    FSLASH    desplazar e ir al estado 34

    $default  reduce usando la regla 22 (expression)


Estado 48

   24 inner1: inner1 ASTERISK inner2 .

    $default  reduce usando la regla 24 (inner1)


Estado 49

   25 inner1: inner1 FSLASH inner2 .

    $default  reduce usando la regla 25 (inner1)


Estado 50

   10 line: CREATEOBJECTINIT argument BAR expression . SEMICOLON RPAREN
   21 expression: expression . PLUS inner1
   22           | expression . MINUS inner1

    PLUS       desplazar e ir al estado 31
    MINUS      desplazar e ir al estado 32
    SEMICOLON  desplazar e ir al estado 57


Estado 51

   19 atom_expression: VARIABLE ASTERISK EQUALS VARIABLE . SEMICOLON

    SEMICOLON  desplazar e ir al estado 58


Estado 52

    9 line: VARIABLE EQUALS lines SEMICOLON .

    $default  reduce usando la regla 9 (line)


Estado 53

   17 atom_expression: VARIABLE EQUALSMUTAL expression SEMICOLON .

    $default  reduce usando la regla 17 (atom_expression)


Estado 54

   18 atom_expression: VARIABLE SET expression SEMICOLON .

    $default  reduce usando la regla 18 (atom_expression)


Estado 55

    7 line: VARIABLE ADD line SEMICOLON .

    $default  reduce usando la regla 7 (line)


Estado 56

    8 line: VARIABLE RM line SEMICOLON .

    $default  reduce usando la regla 8 (line)


Estado 57

   10 line: CREATEOBJECTINIT argument BAR expression SEMICOLON . RPAREN

    RPAREN  desplazar e ir al estado 59


Estado 58

   19 atom_expression: VARIABLE ASTERISK EQUALS VARIABLE SEMICOLON .

    $default  reduce usando la regla 19 (atom_expression)


Estado 59

   10 line: CREATEOBJECTINIT argument BAR expression SEMICOLON RPAREN .

    $default  reduce usando la regla 10 (line)
